helm/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: transmission
spec:
  ingressclassName: cilium
  rules:
    - host: transmission.services.rhoades-brown.local
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  number: 9091
            path: /
            pathType: Prefix
